# rust-encode-mp4-with-ffmpeg-wrapper

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  mp4.rs
