[package]
name = "ffmpeg-wrapper"
version = "0.1.0"
authors = ["Masaharu TASHIRO <masatsr.kit@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
image = "0.23.12"
thiserror = "1.0.23"
